# robot_ws

./: .gitignore  README.md
glim_config_loc/: config_ros.json
glim_config_nav2/: config.json  config_global_mapping_cpu.json  config_ros.json  config_sub_mapping_passthrough.json
hardware/: README.md  blv_r_drive_motors.md  camera_swing_motor.md  dynamixel_steer_motors.md  linear_motor.md  livox_mid360.md  realsense_d435.md
hardware/lift_mechanism/: lift_mechanism.md
maps/: l402_2d_map_0503.pgm  l402_2d_map_0503.yaml  l402_2d_map_clean_0509.pgm  l402_2d_map_clean_0509.yaml  l402_2d_map_lite_0504.pgm  l402_2d_map_lite_0504.yaml
maps/l402_glim_map/: graph.txt  odom_lidar.txt  traj_imu.txt
maps/l402_glim_map/000000/: data.txt
maps/l402_glim_map/config/: config.json  config_ros.json
maps/l402_glim_map_0503/: graph.txt  odom_imu.txt  traj_lidar.txt
maps/l402_glim_map_0503/000000/: data.txt  imu_rate.txt
maps/l402_glim_map_0503/000001/: data.txt  imu_rate.txt
maps/l402_glim_map_0503/000002/: data.txt  imu_rate.txt
maps/l402_glim_map_0503/000003/: data.txt  imu_rate.txt
maps/l402_glim_map_0503/000004/: data.txt  (+1 more)
maps/l402_glim_map_fixed/: graph.txt  odom_imu.txt  traj_lidar.txt
maps/l402_lite/: graph.txt  odom_lidar.txt  traj_imu.txt
maps/l402_lite_0504_replay/: graph.txt  l402_lite_0504_points_world.ply  odom_imu.txt  traj_lidar.txt
maps/my_first_glim_map/: graph.txt  traj_imu.txt  traj_lidar.txt
maps/past-map/: l402_2d_map.pgm  l402_2d_map.yaml  l402_2d_map_clean_0509.pgm
rviz/: gicp_nav2.rviz  glim_loc.rviz  nav2_navigation.rviz  phase2_camera_costmap.rviz  test_nav2.rviz
software-info/: current-frequency-map.md  ros-network-setup.md
src/DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
src/DynamixelSDK/dynamixel_sdk_examples/include/: cmd_vel_to_set_position.hpp  motor_param.hpp  picking_robot_matrix.hpp  pub_dynamixel_data_node.hpp  read_write_node.hpp
src/DynamixelSDK/dynamixel_sdk_examples/src/: cmd_vel_to_set_position.cpp  get_present_position.cpp  pub_position_node.cpp  read_write_node.cpp  tri_read_write_node.cpp
src/livox_ros_driver2/: CMakeLists.txt
src/localization_pkg/: CMakeLists.txt  package.xml
src/localization_pkg/config/: amcl.yaml  fast_lio_mid360.yaml  gicp_localizer.yaml
src/localization_pkg/launch/: fast_lio_localization.launch.py  fast_lio_localization_bag.launch.py  fast_lio_localization_live.launch.py  localization.launch.py
src/localization_pkg/scripts/: gicp_localizer_node.py  livox_custom_to_pc2_node.py
src/localization_pkg/src/: livox_custom_to_pc2_node.cpp
src/mission_manager/: package.xml  setup.py
src/mission_manager/config/: waypoint_map.yaml
src/mission_manager/mission_manager/: mission_manager_node.py  operation_lib.py
src/my_messages/: CMakeLists.txt  package.xml
src/my_messages/msg/: DriveMotor.msg  SteerMotor.msg
src/nav_pkg/: CMakeLists.txt  package.xml
src/nav_pkg/behavior_trees/: navigate_through_poses_phase1_wait_only.xml  navigate_through_poses_phase3.xml  navigate_to_pose_phase1_wait_only.xml  navigate_to_pose_phase3.xml
src/nav_pkg/config/: nav2_params.yaml
src/nav_pkg/launch/: navigation.launch.py  phase2_camera_costmap.launch.py
src/nav_pkg/scripts/: nav_mode_switch_node.py
src/om_modbus_master_V201/om_modbus_master/: CMakeLists.txt  package.xml
src/om_modbus_master_V201/om_modbus_master/include/om_modbus_master/: ICheckData.hpp  ICheckIdShareMode.hpp  IConvertQueryAndResponse.hpp  IModeExtension.hpp  IServerParamCommunicator.hpp  ISetMessage.hpp  ISetResponse.hpp  om_base.hpp  om_broadcast.hpp  om_first_gen.hpp  om_idshare_mode.hpp  om_node.hpp  om_ros_message.hpp  om_second_gen.hpp  om_util.hpp
src/om_modbus_master_V201/om_modbus_master/launch/: om_modbus_master_launch.py
src/om_modbus_master_V201/om_modbus_master/sample/AZ/: idshare1.py  idshare2.py  sample1_1.py  sample1_2.py  sample2_1.py  sample2_2.py  sample3.py
src/om_modbus_master_V201/om_modbus_master/sample/BLV/: sample1_1.py  sample1_2.py  sample2.py  sample3.py
src/om_modbus_master_V201/om_modbus_master/sample/BLV_R/: drive_motor.py  idshare1.py  idshare2.py  ros2_motor_mtn.py  ros2_motor_v2.py
src/om_modbus_master_V201/om_modbus_master/sample/utils/: clientasync.py
src/om_modbus_master_V201/om_modbus_master/src/: om_base.cpp  om_broadcast.cpp  om_first_gen.cpp  om_idshare_mode.cpp  om_node.cpp  om_ros_message.cpp  om_second_gen.cpp
src/omni_base_driver/: CMakeLists.txt  package.xml
src/omni_base_driver/include/omni_base_driver/: cmd_vel_to_motor_node.hpp  motor_param.hpp  picking_robot_matrix.hpp  robot_odom_node.hpp  steer_motor_node.hpp
src/omni_base_driver/src/: cmd_vel_to_motor_node.cpp  robot_odom_node.cpp  steer_motor_node.cpp
src/realsense-ros/: realsense.sh
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_description/: CMakeLists.txt  package.xml
src/safety_layer/: package.xml  setup.cfg  setup.py
src/safety_layer/safety_layer/: cmd_vel_safety_node.py
src/serial_transciever/: package.xml  setup.cfg  setup.py
src/tf_tools/: CMakeLists.txt  package.xml
temp-ref/: camera.md  motor.md
todo-my/ref/: TsukuTsuku.md
todo-my/task-navigation/: ai-navigation-guide.md  guidence-0425.md  phase2-verification-guide.md  phase3-4-verification-guide.md  status-0425.md  step7-navigation-ai-simulation-plan.md  step7-stauts.md
todo-my/task-sim-real-dev/: isaac-sim-pc-after-clone-guide.md  sim-real-build-guideline.md
tools/: auto_initial_align.py  check_nav2_phase1.sh  check_robot_urdf.sh  create_glim_map_quickstart.sh  fake_wheel_odom.py  filter_livox_tf_bag.py  interactive_ply_initialpose_publisher.py  lidar_tf_tuner.py  nav2_debug_monitor.py  nav2_debug_recorder.py  open_fast_lio2_loc_terminals.sh  open_gicp_loc_terminals.sh  open_glim_loc_terminals.sh  open_nav2_terminals.sh  open_nav2_windows.sh  open_phase2_camera_costmap_windows.sh  pack_latest_nav2_debug.sh  ply_to_nav2_map.py  pointcloud_to_nav2_map.py  publish_l402_overlay.sh  publish_ply_pointcloud.py  record_semantic_bag.sh  setup_fast_lio.sh  visualize_glim_anchor_poses.py  watch_nav2_debug.sh
(+94 files in other folders)
