<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.0.0</version>
  <description>
    Mission Manager (Phase 4): task state machine + operation library + waypoint map.
    Provides go_to(), cancel_navigation(), rotate_in_place(), wait_until_clear() etc.
    Nav2 goals are sent via nav2_simple_commander.BasicNavigator.
  </description>
  <maintainer email="hide.matsuhide0312@gmail.com">matsunaga-h</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
