<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_base_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matsunaga-h@roboken.iit.tsukuba.ac.jp">matsunaga-h</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend>
  <depend>my_messages</depend>
  <depend>dynamixel_sdk_examples</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend> 
  <depend>tf2</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
