<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_layer</name>
  <version>0.0.0</version>
  <description>
    Safety layer between nav/teleop and motors.
    Provides cmd_vel watchdog, speed clamping, and emergency stop.
    Sits between nav_mode_switch_node (/cmd_vel_raw) and omni_base_driver (/cmd_vel).
  </description>
  <maintainer email="hide.matsuhide0312@gmail.com">matsunaga-h</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
